--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,2 +1,9 @@
 /* Font Import */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+/* Root Variables */
+:root {
+  --headerBg: #161616; /* Header background color */
+  --seccondary: #d1bda1; /* Secondary color */
+  --bg: #272c33; /* Background color */
+}
