--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -1,44 +1,44 @@
-<div class='container '>
+<div class='container'>
   <div class='row'>
     <div id='left-column' class='col-md-2'></div>
     <!-- Offset column to center content -->
     <div id='main-content' class='col-12 col-md-8 login mt-5 p-3'>
+
       <form>
 
+        <div class='mb-3'>
+          <label for='first-name' class='form-label'>First Name</label>
+          <input type='text' class='form-control' id='first-name' />
+        </div>
+
+        <div class='mb-3'>
+          <label for='last-name' class='form-label'>Last Name</label>
+          <input type='text' class='form-control' id='last-name' />
+        </div>
+
         <div class='my-3'>
-          <label for='exampleInputEmail1' class='form-label'>Email address</label>
+          <label for='email' class='form-label'>Email address</label>
           <input
             type='email'
             class='form-control'
-            id='exampleInputEmail1'
+            id='email'
             aria-describedby='emailHelp'
           />
           <div id='emailHelp' class='form-text'>We'll never share your email
             with anyone else.</div>
         </div>
+
         <div class='mb-3'>
-          <label for='exampleInputPassword1' class='form-label'>Password</label>
-          <input
-            type='password'
-            class='form-control'
-            id='exampleInputPassword1'
-          />
+          <label for='password' class='form-label'>Password</label>
+          <input type='password' class='form-control' id='password' />
         </div>
 
         <!-- Additional form fields -->
 
-        <div class='mb-3'>
-          <label for='exampleInputName' class='form-label'>Full Name</label>
-          <input type='text' class='form-control' id='exampleInputName' />
-        </div>
-        <div class='mb-3'>
-          <label for='exampleInputPhone' class='form-label'>Phone Number</label>
-          <input type='tel' class='form-control' id='exampleInputPhone' />
-        </div>
-
         <!-- End of additional form fields -->
         <div id='signup-link' class='mb-3'>
-          <a href='/Login' class='form-check-label'>Already have an account? Login here!</a>
+          <a href='/Login' class='form-check-label'>Already have an account?
+            Login here!</a>
         </div>
 
         <div id='submit-button' class='col-md-4 offset-md-4'>
