--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -23,12 +23,13 @@
           class='form-control'
           placeholder='Leave a comment here!'
           id='postComment'
-          style='height: 150px; font-size: 18px;'
+          style='height: 150px; font-size: 16px;'
         ></textarea>
       </div>
     </div>
-    <div class='col-12 col-md-6'>
-      <button class='btn' id='newPostButton' type='button'>+ New Post</button>
+    <div class='d-flex justify-content-center'>
+      <!-- Added wrapper div with flex properties -->
+      <button id='newPostButton' type='button'>+ New Post</button>
     </div>
   </div>
 </div>
