--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,24 +16,27 @@
   <body>
     <div class='header container-fluid p-4'>
       <div class='row'>
-        <nav class='navbar col-12 col-md-8 justify-content-md-start justify-content-center'>
-          <ul >
+        <nav
+          class='navbar col-12 col-md-8 justify-content-md-start justify-content-center'
+        >
+          <ul>
             <!-- Added Bootstrap classes 'row col-5' -->
-            <li class="my-2"><a href='/'>Home</a></li>
-            <li class="my-2"> <a href='/dashboard'>Dashboard</a></li>
-            <li class="my-2">
+            <li class='my-2'><a href='/'>Home</a></li>
+            <li class='my-2'> <a href='/dashboard'>Dashboard</a></li>
+            <li class='my-2'>
               <!-- Conditionally render login or logout links -->
               {{#if logged_in}}
-              <a href='/profile'>Profile</a>
-              |
-              <button id='logout'>Logout</button>
+                <a href='/logout'>Logout</a>
+                <button id='logout'>Logout</button>
               {{else}}
-              <a href='/login'>Login</a>
+                <a href='/login'>Login</a>
               {{/if}}
             </li>
           </ul>
         </nav>
-        <div class='col-12 col-md-4 text-center box d-flex justify-content-center'>
+        <div
+          class='col-12 col-md-4 text-center box d-flex justify-content-center'
+        >
           <!-- Added Bootstrap classes 'd-flex justify-content-center' -->
           <h1 class='fs-3 h1El text-uppercase'><a href='/'>The Tech Blog</a></h1>
         </div>
