--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,7 +62,7 @@
 
     <!-- Render script for logged in users only -->
     {{#if logged_in}}
-      <script src=''></script>
+      <script src='/js/logout.js'></script>
     {{/if}}
   </body>
 
