Deleted the uneeded button and gave logout an id

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,8 +26,8 @@
             <li class='my-2'>
               <!-- Conditionally render login or logout links -->
               {{#if logged_in}}
-                <a href='/logout'>Logout</a>
-                <button id='logout'>Logout</button>
+                <a id='logout' href='/logout'>Logout</a>
+                {{!-- <button class='btn' id='logout'>logout</button> --}}
               {{else}}
                 <a href='/login'>Login</a>
               {{/if}}
