Linked the signUp.js file to the handlebars and formated the code

--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -43,7 +43,11 @@
 
         <div id='submit-button' class='col-md-4 offset-md-4'>
           <!-- Centered column -->
-          <button type='submit' class='btn btn-primary w-100'>Submit</button>
+          <button
+            type='submit'
+            id='submit-button1'
+            class='btn btn-primary w-100'
+          >Submit</button>
         </div>
 
       </form>
@@ -52,3 +56,5 @@
     <!-- Offset column to center content -->
   </div>
 </div>
+
+<script src='/js/signUp.js'></script>
