Setting text decoration to non on the post in main oage

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,6 +140,10 @@ body {
   max-width: 1000px;
 }
 
+.post a {
+  text-decoration: none;
+}
+
 /* Centering the post header */
 .postHeader {
   text-align: center;
