--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,8 @@
+
+<div class="extraUserInfo">
+  <h1>Click on any post to add a comment!</h1>
+</div>
+
 {{#each posts as |post|}}
   <div class='col-12 col-md-8 col-lg-8 post'>
     <a href='/comment/{{post.id}}'><div class='card mb-5'>
